fix: Hide background bleed on Chrome
Seeing this only on Chrome (not Safari or Firefox), and only above
a certain screen width. The right-hand side (and not the left)
radial-gradient is bleeding into the border zone of the box (even though
there is no border). I suspect some kind of rounding error bug in the
renderer. Whatever the cause, I can stop the leakage with
background-clip.

https://developer.mozilla.org/en-US/docs/Web/CSS/background-clip

--- a/src/client/components/App.css
+++ b/src/client/components/App.css
@@ -53,6 +53,7 @@ h1 a {
     radial-gradient(farthest-side at 0 50%, rgba(0,0,0,.2), rgba(0,0,0,0)),
     radial-gradient(farthest-side at 100% 50%, rgba(0,0,0,.2), rgba(0,0,0,0)) 100% 0;
   background-attachment: local, local, scroll, scroll;
+  background-clip: padding-box;
   background-color: white;
   background-repeat: no-repeat;
   background-size: 40px 100%, 40px 100%, 14px 100%, 14px 100%;
